Add About Us section with team info and core values

--- a/index.html
+++ b/index.html
@@ -16,6 +16,19 @@
             <p>We aim to build a better future through collaboration and innovation.</p>
         </section>
         <section>
+            <h2>About Us</h2>
+            <p>Founded in 2020, New Society began as a small group of dedicated individuals who wanted to make a difference in their communities.</p>
+            <h3>Our Core Values</h3>
+            <ul>
+                <li>Transparency and accountability in all our actions</li>
+                <li>Respect for diversity and inclusion</li>
+                <li>Sustainable approaches to community development</li>
+                <li>Empowerment through education and resources</li>
+            </ul>
+            <h3>Our Team</h3>
+            <p>Our team consists of passionate professionals from various backgrounds including social work, education, technology, and environmental science.</p>
+        </section>
+        <section>
             <h2>Get Involved</h2>
             <p>Join us in creating positive change for communities worldwide.</p>
         </section>
